# matrix-bridge-feishu

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  _diff.md  _todos.md  compose.yml  example-config.yaml
.github/workflows/: ci.yml  crates-release.yml  docker.yml  release.yml  tests.yml
config/: config.example.kdl  config.example.yaml
scripts/: release-check.ps1  stress-batch-messages.ps1  stress-webhook.ps1
src/: lib.rs  main.rs
src/bridge/: command_handler.rs  event_processor.rs  feishu_bridge.rs  matrix_event_parser.rs  matrix_to_feishu_dispatcher.rs  message.rs  message_flow.rs  mod.rs  portal.rs  presence_handler.rs  provisioning.rs  puppet.rs  user.rs
src/config/: bridge.rs  mod.rs
src/database/: error.rs  mod.rs  models.rs  sqlite_stores.rs  stores.rs
src/feishu/: client.rs  mod.rs  service.rs  types.rs
src/formatter/: feishu_to_matrix.rs  matrix_to_feishu.rs  mod.rs
src/util/: mod.rs
src/web/: health.rs  metrics.rs  mod.rs  provisioning.rs
tests/: mock_feishu_matrix.rs
