[package]
name = "matrix-appservice-feishu"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Matrix Feishu Bridge Contributors"]
description = "A Matrix-Feishu puppeting bridge"
license = "AGPL-3.0-or-later"
repository = "https://github.com/palpo-im/matrix-appservice-feishu"

[dependencies]
tokio = { version = "1", features = ["full"] }
salvo = { version = "0.73", features = ["affix", "compression", "cors", "jwt-auth", "logging", "oapi", "quinn", "serve-static", "sse", "websocket", "proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "sqlite", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
url = "2"

[profile.release]
lto = true
strip = true
opt-level = 3

[[bin]]
name = "matrix-appservice-feishu"
path = "src/main.rs"