[package]
name = "matrix-bridge-feishu"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Matrix Feishu Bridge Contributors"]
description = "A Matrix-Feishu puppeting bridge"
license = "Apache-2.0"
repository = "https://github.com/palpo-im/matrix-bridge-feishu"

[dependencies]
tokio = { version = "1", features = ["full"] }
salvo = { version = "0.89.1", default-features = false, features = [
    "server",
    "http1",
    "logging",
    "cors",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
diesel = { version = "2.3.6", default-features = false, features = [
    "sqlite",
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = { version = "1", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "multipart",
] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
url = "2"
matrix-bot-sdk = { path = "../matrix-bot-sdk" }

[profile.release]
lto = true
strip = true
opt-level = 3

[[bin]]
name = "matrix-bridge-feishu"
path = "src/main.rs"
